@startuml
Application o-- ApplicationController
ApplicationController o-- RecordItem
class Application{
+start(Stage stage)
+main(String[] args)
}
class ApplicationController{
-Text saveText;
-Text loadText;
-Text itemCounterText;
-Text descriptionStatus;
-Text dueDateStatus;
-DatePicker date;
-TableColumn<RecordItem, String> tableDescription;
-TableColumn<RecordItem, String> tableDueDate;
-TableColumn<RecordItem, String> tableStatus;
-ableColumn<RecordItem, String> tableSelect;
-TableView<RecordItem> table;
-TextField saveName;
-TextField savePath;
-TextField loadPath;
-TextArea addDescription;
+ObservableList<RecordItem> items = FXCollections.observableArrayList();
-String NOT_COMPLETE;
-int counter;

+addItemToListPressed(MouseEvent mouseEvent)
+deleteItemPressed(MouseEvent mouseEvent)
+clearListPressed(MouseEvent mouseEvent)
+dueDateEdit(TableColumn.CellEditEvent<RecordItem, String>recordItemStringCellEditEvent)
+descriptionEdit(TableColumn.CellEditEvent<RecordItem, String>recordItemStringCellEditEvent)
+completePressed(MouseEvent mouseEvent)
+showIncomplete(MouseEvent mouseEvent)
+showComplete(MouseEvent mouseEvent)
+showAllPressed(MouseEvent mouseEvent)
+incompletePressed(MouseEvent mouseEvent)
+loadListPressed()
+saveListPressed()
+initialize()

}
class RecordItem{
-String description;
-String dueDate;
-String status;
-CheckBox select;
+RecordItem(String title, String description, String dueDate, boolean complete, boolean inView)
+getTitle()
+setTitle(String title)
+getDescription()
+setDescription(String description)
+setDueDate(String dueDate)
+getDueDate()
+getSelect()
+setSelect()
}
@enduml